# Copyright (c) 2024 Tobias Erbsland - https://erbsland.dev
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.23)

add_subdirectory(impl)
add_subdirectory(vr)

target_sources(erbsland-configuration-parser PRIVATE
        AccessCheck.hpp
        AccessCheckResult.hpp
        AccessSources.hpp
        Bytes.cpp
        Bytes.hpp
        CaseSensitivity.hpp
        Date.cpp
        Date.hpp
        DateTime.cpp
        DateTime.hpp
        Document.hpp
        DocumentBuilder.hpp
        Error.cpp
        Error.hpp
        ErrorCategory.cpp
        ErrorCategory.hpp
        EscapeMode.hpp
        FileAccessCheck.cpp
        FileAccessCheck.hpp
        FileSourceResolver.cpp
        FileSourceResolver.hpp
        Float.hpp
        Integer.hpp
        Location.cpp
        Location.hpp
        Matrix.hpp
        Name.cpp
        Name.hpp
        NamePath.cpp
        NamePath.hpp
        NameType.hpp
        Parser.cpp
        Parser.hpp
        Position.cpp
        Position.hpp
        RegEx.hpp
        SignatureSigner.hpp
        SignatureSignerData.hpp
        SignatureValidator.hpp
        SignatureValidatorData.hpp
        SignatureValidatorResult.hpp
        Signer.cpp
        Signer.hpp
        Source.cpp
        Source.hpp
        SourceIdentifier.hpp
        SourceResolver.hpp
        SourceResolverContext.hpp
        String.cpp
        String.hpp
        StringList.hpp
        StringConvertible.hpp
        TestFormat.hpp
        Time.cpp
        Time.hpp
        TimeDelta.cpp
        TimeDelta.hpp
        TimeOffset.cpp
        TimeOffset.hpp
        TimeUnit.cpp
        TimeUnit.hpp
        Value.cpp
        Value.hpp
        Value_asType.tpp
        Value_format.tpp
        Value_get.tpp
        Value_list.tpp
        Value_matrix.tpp
        ValueIterator.cpp
        ValueIterator.hpp
        ValueList.hpp
        ValueMatrix.hpp
        ValueType.cpp
        ValueType.hpp
)
